--- a/trackmania/2020/Dockerfile
+++ b/trackmania/2020/Dockerfile
@@ -1,5 +1,5 @@
 # Base image - lightweight Alpine Linux
-FROM alpine:3.12
+FROM alpine:3.18.4
 
 # Install dependencies (git, curl, node, npm, etc.)
 RUN apk update && apk upgrade && \
@@ -14,19 +14,17 @@ RUN apk update && apk upgrade && \
     python3 \
     py3-pip
 
-# Create necessary directories (like /mnt/server and /mnt/install)
-RUN mkdir -p /mnt/server /mnt/install
+# Create necessary directories
+RUN mkdir -p /mnt/server
 
 # Set the working directory to /mnt/server
 WORKDIR /mnt/server
 
-# Copy the entrypoint and install scripts into the container
+# Copy the entrypoint script into the container
 COPY entrypoint.sh /entrypoint.sh
-COPY start.sh /mnt/server/start.sh
-COPY install.sh /mnt/install/install.sh
 
-# Set executable permissions for the scripts
-RUN chmod +x /entrypoint.sh /mnt/server/start.sh /mnt/install/install.sh
+# Set executable permissions for the entrypoint script
+RUN chmod +x /entrypoint.sh
 
 # Set the entrypoint to handle initialization when the container starts
 ENTRYPOINT ["/entrypoint.sh"]
