--- a/trackmania/2020/Dockerfile
+++ b/trackmania/2020/Dockerfile
@@ -1,9 +1,9 @@
-# Base image - lightweight Alpine Linux
 FROM alpine:3.18.4
 
-# Install dependencies (git, curl, node, npm, etc.)
-RUN apk update && apk upgrade && \
-    apk add --no-cache \
+USER root
+
+# Install necessary packages
+RUN apk update && apk add --no-cache \
     git \
     xmlstarlet \
     jq \
@@ -11,31 +11,20 @@ RUN apk update && apk upgrade && \
     unzip \
     nodejs \
     npm \
-    python3 \
-    py3-pip \
-    dos2unix \
-    sudo
+    dos2unix
 
-# Create necessary directories
-RUN mkdir -p /mnt/server
+# Set container user and environment
+RUN adduser -D -h /home/container container
+USER container
+ENV USER=container HOME=/home/container
+WORKDIR /home/container
 
-# Set the working directory to /mnt/server
-WORKDIR /mnt/server
+# Copy the scripts and make them executable
+COPY ./entrypoint.sh /home/container/entrypoint.sh
+COPY ./start-minicontrol.sh /home/container/start-minicontrol.sh
 
-# Copy the start script into /mnt/server
-COPY start-minicontrol.sh /mnt/server/start-minicontrol.sh
+# Convert line endings and set executable permissions
+RUN dos2unix /home/container/entrypoint.sh /home/container/start-minicontrol.sh \
+    && chmod +x /home/container/entrypoint.sh /home/container/start-minicontrol.sh
 
-# Ensure proper line endings for Linux (start-minicontrol.sh)
-RUN dos2unix /mnt/server/start-minicontrol.sh
-
-# Set executable permissions for the start script
-RUN chmod +x /mnt/server/start-minicontrol.sh
-
-# Copy the entrypoint script
-COPY entrypoint.sh /mnt/server/entrypoint.sh
-
-# Ensure proper line endings for entrypoint and start command
-RUN dos2unix /mnt/server/entrypoint.sh && chmod +x /mnt/server/entrypoint.sh
-
-# Set the entrypoint to handle initialization and setup
-ENTRYPOINT ["/mnt/server/entrypoint.sh"]
+ENTRYPOINT ["/bin/sh", "/home/container/entrypoint.sh"]
