--- a/trackmania/2020/Dockerfile
+++ b/trackmania/2020/Dockerfile
@@ -19,12 +19,18 @@ USER container
 ENV USER=container HOME=/home/container
 WORKDIR /home/container
 
-# Copy the scripts and make them executable
+# Copy the entrypoint and start-minicontrol.sh scripts
 COPY ./entrypoint.sh /home/container/entrypoint.sh
 COPY ./start-minicontrol.sh /home/container/start-minicontrol.sh
 
-# Convert line endings and set executable permissions
-RUN dos2unix /home/container/entrypoint.sh /home/container/start-minicontrol.sh \
-    && chmod +x /home/container/entrypoint.sh /home/container/start-minicontrol.sh
+# Debugging: list files to verify they were copied correctly
+RUN ls -la /home/container
 
+# Convert line endings for scripts
+RUN dos2unix /home/container/entrypoint.sh /home/container/start-minicontrol.sh
+
+# Set executable permissions for scripts
+RUN chmod +x /home/container/entrypoint.sh /home/container/start-minicontrol.sh
+
+# Set the entrypoint script
 ENTRYPOINT ["/bin/sh", "/home/container/entrypoint.sh"]
