--- a/trackmania/2020/Dockerfile
+++ b/trackmania/2020/Dockerfile
@@ -17,14 +17,15 @@ RUN apt update && apt install -y \
 COPY ./entrypoint.sh /home/container/entrypoint.sh
 COPY ./start-minicontrol.sh /home/container/start-minicontrol.sh
 
-# Set correct ownership to container user before running dos2unix
+# Create the container user
+RUN useradd -m -d /home/container container
+
+# Set correct ownership to container user
 RUN chown container:container /home/container/entrypoint.sh /home/container/start-minicontrol.sh
 
-# Convert line endings for scripts
-RUN dos2unix /home/container/entrypoint.sh /home/container/start-minicontrol.sh
-
-# Set executable permissions for scripts
-RUN chmod +x /home/container/entrypoint.sh /home/container/start-minicontrol.sh
+# Convert line endings and set executable permissions as root
+RUN dos2unix /home/container/entrypoint.sh /home/container/start-minicontrol.sh \
+    && chmod +x /home/container/entrypoint.sh /home/container/start-minicontrol.sh
 
 USER container
 ENV USER=container HOME=/home/container
