--- a/trackmania/2020/Dockerfile
+++ b/trackmania/2020/Dockerfile
@@ -4,6 +4,7 @@ USER root
 
 # Install necessary packages
 RUN apk update && apk add --no-cache \
+    bash \
     git \
     xmlstarlet \
     jq \
@@ -13,26 +14,32 @@ RUN apk update && apk add --no-cache \
     npm \
     dos2unix
 
+# Set the working directory
+WORKDIR /home/container
+
 # Copy the entrypoint and start-minicontrol.sh scripts
-COPY ./entrypoint.sh /home/container/entrypoint.sh
+COPY ./entrypoint.sh /entrypoint.sh
 COPY ./start-minicontrol.sh /home/container/start-minicontrol.sh
 
 # Convert line endings and set executable permissions
-RUN dos2unix /home/container/entrypoint.sh /home/container/start-minicontrol.sh \
-    && chmod +x /home/container/entrypoint.sh /home/container/start-minicontrol.sh
+RUN dos2unix /entrypoint.sh /home/container/start-minicontrol.sh \
+    && chmod +x /entrypoint.sh /home/container/start-minicontrol.sh
 
 # Create the container user
 RUN adduser -D -h /home/container container
 
 # Set correct ownership to container user
-RUN chown container:container /home/container/entrypoint.sh /home/container/start-minicontrol.sh
+RUN chown container:container /entrypoint.sh /home/container/start-minicontrol.sh
 
 USER container
 ENV USER=container HOME=/home/container
-WORKDIR /home/container
 
-# Debugging: list files to verify they were copied correctly
-RUN ls -la /home/container
+# Debugging: Check if entrypoint and startup scripts are correctly copied and executable
+RUN ls -la /entrypoint.sh /home/container/start-minicontrol.sh
+RUN echo "Debug: Current working directory: $(pwd)"
+
+# Debugging: Show installed packages
+RUN apk info
 
 # Set the entrypoint script
-ENTRYPOINT ["/bin/sh", "/home/container/entrypoint.sh"]
+CMD ["/bin/bash", "/entrypoint.sh"]
