--- a/trackmania/2020/Dockerfile
+++ b/trackmania/2020/Dockerfile
@@ -1,10 +1,9 @@
-FROM alpine:3.18.4
+FROM alpine:latest
 
-USER root
+ENV DEBIAN_FRONTEND=noninteractive
 
 # Install necessary packages
 RUN apk update && apk add --no-cache \
-    bash \
     git \
     xmlstarlet \
     jq \
@@ -14,32 +13,18 @@ RUN apk update && apk add --no-cache \
     npm \
     dos2unix
 
-# Set the working directory
-WORKDIR /home/container
+# Set container user and environment
+USER container
+ENV USER=container HOME=/home/container
+WORKDIR /
 
 # Copy the entrypoint and start-minicontrol.sh scripts
 COPY ./entrypoint.sh /entrypoint.sh
 COPY ./start-minicontrol.sh /home/container/start-minicontrol.sh
 
-# Convert line endings and set executable permissions
+# Convert line endings for scripts and set permissions
 RUN dos2unix /entrypoint.sh /home/container/start-minicontrol.sh \
     && chmod +x /entrypoint.sh /home/container/start-minicontrol.sh
 
-# Create the container user
-RUN adduser -D -h /home/container container
-
-# Set correct ownership to container user
-RUN chown container:container /entrypoint.sh /home/container/start-minicontrol.sh
-
-USER container
-ENV USER=container HOME=/home/container
-
-# Debugging: Check if entrypoint and startup scripts are correctly copied and executable
-RUN ls -la /entrypoint.sh /home/container/start-minicontrol.sh
-RUN echo "Debug: Current working directory: $(pwd)"
-
-# Debugging: Show installed packages
-RUN apk info
-
 # Set the entrypoint script
-CMD ["/bin/bash", "/entrypoint.sh"]
+ENTRYPOINT ["/bin/sh", "/entrypoint.sh"]
